# quikode

./: .gitignore  CLAUDE.md  README.md  orientation.md  pyproject.toml
audits/: fsm-state-flattening-audit.md
docker/: Dockerfile  Dockerfile.python  build.sh  entrypoint.sh
docs/: architecture.md  design-per-subtask-commit.md  design-tui.md  design-v2.md  execution-backends.md  future-work.md  incident-2026-05-07-recovery.md  lessons-learned.md  roadmap.md  runbook-incident-response.md  runbook-operations.md  runbook-tanren-watch-points.md  validation-2026-05-03-findings.md
plans/: 00-INDEX.md  01-retry-landscape.md  02-network-rate-limit-backoff.md  03-conflict-cap-and-force-push.md  04-supervision-stall-event.md  05-poisoned-worktree-wipe.md  06-progress-check-signal-quality.md  07-observability-overnight.md  08-budget-tightening.md  09-prompt-level-leverage.md  10-resume-correctness.md  11-stream-agent-output-to-log.md  12-no-ci-leak-invariant.md  13-scope-review-gate-fix-rule.md  14-checker-must-not-fabricate.md  15-qk-show-markup-safety.md  16-dev-container-readiness-timeout.md  17-clean-loop-prompt-architecture.md  18-doer-must-inspect-actual-diff.md  19-quota-cascade-prevention.md  19A-quota-exhausted-internal-retry.md  20-container-vanished-recovery.md  21-scope-review-observability.md  22-doer-prior-output-carry-forward.md  23-same-signature-stop-loss.md  24-final-stabilization-subtask.md  26-tui-gauntlet-staleness-and-z99-resume-guard.md  27-targeted-rewind-recovery.md  28-streamlined-post-pr-fsm.md  30-review-ready-signal.md  31-stacked-diff-rebase-model.md  32-merge-node-first-class.md  33-rubric-first.md  34-daemon-stop-reliability.md  35-multi-project-control-plane.md  35-standards-profile-linking.md  36-self-audit-denial-false-positive.md  36-unified-global-scheduler.md  37-qk-monitor-builtin.md  37-shared-resource-fabric.md  (+31 more)
prompts/: _evaluation_context.md.j2  checker.md  conflict-resolver.md  doer.md  fixup-planner.md  intent-reviewer.md  merge-planner.md  planner.md  pre-pr-architecture.md  pre-pr-behavior.md  pre-pr-rubric.md  pre-pr-standards.md  progress.md  review-classifier.md  scope-review.md  subtask-checker.md  subtask-doer.md  subtask-triage.md  triage.md
quikode/: __init__.py  agent_registry.py  agent_schemas.py  ancestry.py  architecture_docs.py  cli.py  cli_briefing_dev.py  cli_cache_stats.py  cli_context.py  cli_core.py  cli_daemon.py  cli_demo.py  cli_detect_merged.py  cli_lifecycle.py  cli_monitor.py  cli_replan_cycle.py  cli_reset_plan.py  cli_resources.py  cli_rewind.py  cli_show_export.py  cli_standards.py  cli_unblock_context.py  cli_workspace.py  config.py  config_descriptions.py  config_loader.py  config_template.py  config_validation.py  daemon.py  daemon_shutdown.py  dag.py  docker_env.py  evaluation_contract.py  evaluation_contract_serde.py  execution.py  fsm.py  fsm_runtime.py  git_push_recovery.py  github.py  github_graphql.py  (+38 more)
scripts/: reinstall.sh
tests/: conftest.py  test_agent_registry.py  test_agent_schemas.py  test_agents.py  test_architecture_docs.py  test_architecture_guards.py  test_auto_merge.py  test_block_forensics.py  test_blocked_pr_comment.py  test_branch_divergence_recovery.py  test_briefing_costs.py  test_briefing_v3_states.py  test_ccusage.py  test_claude_shim.py  test_cli_detect_merged.py  test_cli_monitor.py  test_cli_replan_cycle.py  test_cli_resume.py  test_codex_shims.py  test_config_loader_audit_log.py  test_config_schema.py  test_config_validation.py  test_conflict_resolver_envelope.py  test_daemon_lifecycle.py  test_daemon_supervisor.py  test_dag.py  test_dag_layout.py  test_dag_render.py  test_dag_screen.py  test_dag_stats.py  (+113 more)
(+106 files in other folders)
