[project]
name = "quikode"
version = "0.1.0"
description = "Parallel AI-coding workspace bootstrapper and task DAG executor"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "textual>=0.86.0",
    "docker>=7.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "anyio>=4.6.0",
]

[project.scripts]
quikode = "quikode.cli:app"
qk = "quikode.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quikode"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
# Strict by default; carve out known false-positives + things that fight us
# more than they help. Rationale per ignore listed inline.
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "RUF",    # ruff-specific
    "PIE",    # flake8-pie
    "PERF",   # perflint
    "PL",     # pylint
    "TID",    # flake8-tidy-imports
    "C4",     # flake8-comprehensions
    "ARG",    # flake8-unused-arguments
    "DTZ",    # flake8-datetimez
    "PTH",    # flake8-use-pathlib
    "T20",    # flake8-print (no print() outside CLI)
]
ignore = [
    "E501",      # line length — handled by formatter
    "PLR0913",   # too many args — common in CLI handlers
    "PLR0912",   # too many branches — orchestrator/worker have legitimately rich state machines
    "PLR0915",   # too many statements — same
    "PLR2004",   # magic value comparisons — readable enough in this domain
    "RUF001",    # ambiguous unicode in strings — we use em-dashes intentionally
    "RUF002",    # same in docstrings
    "RUF003",    # same in comments
    "DTZ005",    # tz-naive datetime — we use time.time() for relative deltas, naive is fine
    "PERF401",   # listcomp suggestion — readability
    "PLR0911",   # too many returns — state-machine code naturally has these
    "PLW0603",   # global statement — unused
    "SIM117",    # multiple with — readable as-is
    "ARG001",    # unused function args — typer flags often go unused in handlers
    "ARG002",    # unused method args
    "TID252",    # relative imports — package-internal, fine
    "PTH123",    # `open()` over Path — sometimes clearer
    "PLR0904",   # too many public methods — workers/orchestrators are stateful
    "PLW1510",   # subprocess without check=True — we inspect rc deliberately
    "B008",      # function call in default argument — Path() defaults are idiomatic
    "RUF043",    # pytest match metacharacters — we know
    "T201",      # print() — used in CLI --json output for clean stdout
    "SIM105",    # suppressible-exception — try/except/pass is fine here
    "PLW2901",   # loop var redefined — intentional for ruff
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "S101", "ARG", "PLR0913", "T20", "B011"]
"quikode/cli.py" = ["T20", "PLR0915"]   # cli is print-heavy by design

[tool.ruff.format]
# defaults are fine

# `ty` is astral's typechecker (alpha). Treat it like a linter for now —
# we run it manually and address the issues, not in CI yet.
[tool.ty]
# Configuration TBD; ty's config schema is still evolving.

[tool.ty.environment]
python-version = "3.12"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
